<resources>
    <string name="app_name">PhotoMaster</string>
    <string name="openPhoto">Click here to open one photo</string>
    <string name="add">+</string>
    <string name="oepnalum">Open the system album</string>
    <string name="camera">Open the camera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save"> √ </string>
    <string name="info">Info</string>
    <string name="graininess">Graininess</string>
    <string name="rotate">Rotate</string>
    <string name="tags">Tags</string>
    <string name="saturation">Saturation</string>
    <string name="contrast">Contrast</string>
    <string name="brightness">Brightness</string>
    <string name="crop">Crop</string>
    <string name="mango_face">Mango Face</string>
    <string name="enhance">Enhance</string>
    <string name="reset">Reset</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="info_msg">Here is EE5415 5th Group Project.\n\nName: PhotoMaster\n\nGroup Member: \n HE Mengwen\n LI Jingjing\n LIU Ying\n LIN Hongyu\n XIONG Ningchang\n\nContact Us: nxiong9-c@my.cityu.edu.hk\n\n</string>
    <string name="share_to_weibo">share to weibo</string>
    <string name="share_to_qq_platform">Share to QQ</string>
    <string name="share_to_wechat_platform">Share to Wechat</string>
    <string name="download_to_phone">Download to phone</string>
</resources>