<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <ImageButton
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:scaleType="fitXY"
        android:background="@drawable/reset_setting"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="100dp"
        android:onClick="reset"
        android:id="@+id/resetBtn"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textColor="@color/main"
        android:textSize="12sp"
        android:onClick="reset"
        app:layout_constraintEnd_toEndOf="@+id/resetBtn"
        app:layout_constraintStart_toStartOf="@id/resetBtn"
        app:layout_constraintTop_toBottomOf="@+id/resetBtn"
        />

    <ImageButton
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:scaleType="fitXY"
        android:background="@drawable/enhance_setting"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@id/resetBtn"
        android:layout_marginLeft="40dp"
        android:onClick="enhanceResolution"
        android:id="@+id/enhanceBtn"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Repair"
        android:textColor="@color/main"
        android:textSize="12sp"
        android:onClick="enhanceResolution"
        app:layout_constraintEnd_toEndOf="@+id/enhanceBtn"
        app:layout_constraintStart_toStartOf="@id/enhanceBtn"
        app:layout_constraintTop_toBottomOf="@+id/enhanceBtn"
        />

    <ImageButton
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:scaleType="fitXY"
        android:background="@drawable/mango_setting"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="100dp"
        android:onClick="detectEmotion"
        android:id="@+id/mangoBtn"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mango_face"
        android:textColor="@color/main"
        android:textSize="12sp"
        android:onClick="detectEmotion"
        app:layout_constraintEnd_toEndOf="@id/mangoBtn"
        app:layout_constraintStart_toStartOf="@id/mangoBtn"
        app:layout_constraintTop_toBottomOf="@+id/enhanceBtn">
    </TextView>
    <!--第二行-->
    <ImageButton
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:scaleType="fitXY"
        android:background="@drawable/text_setting"
        app:layout_constraintTop_toBottomOf="@id/resetBtn"
        android:layout_marginTop="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="40dp"
        android:id="@+id/textBtn"
        android:onClick="textClick"
        />
    <!--    android:onClick="startCrop"-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Text"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@id/textBtn"
        app:layout_constraintStart_toStartOf="@id/textBtn"
        app:layout_constraintEnd_toEndOf="@id/textBtn"
        android:layout_marginTop="4dp"
        android:textColor="@color/grey">
    </TextView>

    <ImageButton
        android:id="@+id/cropBtn"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/crop_setting"
        android:onClick="photoClip"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="@id/textBtn"
        app:layout_constraintRight_toRightOf="@id/brightBtn"
        app:layout_constraintTop_toBottomOf="@id/enhanceBtn" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crop"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/cropBtn"
        app:layout_constraintStart_toStartOf="@id/cropBtn"
        app:layout_constraintEnd_toEndOf="@id/cropBtn"
        android:layout_marginTop="4dp"
        android:onClick="photoClip"
        android:textColor="@color/grey">
    </TextView>

    <ImageButton
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:scaleType="fitXY"
        android:background="@drawable/bright_setting"
        app:layout_constraintTop_toBottomOf="@id/enhanceBtn"
        android:layout_marginTop="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="tuneBrightness"
        android:id="@+id/brightBtn" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brightness"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/brightBtn"
        app:layout_constraintStart_toStartOf="@id/brightBtn"
        app:layout_constraintEnd_toEndOf="@id/brightBtn"
        android:layout_marginTop="4dp"
        android:onClick="tuneBrightness"
        android:textColor="@color/grey">
    </TextView>

    <ImageButton
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:scaleType="fitXY"
        android:background="@drawable/contrast_setting"
        app:layout_constraintTop_toBottomOf="@id/enhanceBtn"
        android:layout_marginTop="28dp"
        app:layout_constraintLeft_toLeftOf="@id/brightBtn"
        app:layout_constraintRight_toRightOf="@id/saturationBtn"
        android:onClick="tuneContrast"
        android:id="@+id/contrastBtn" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrast"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/contrastBtn"
        app:layout_constraintStart_toStartOf="@id/contrastBtn"
        app:layout_constraintEnd_toEndOf="@id/contrastBtn"
        android:layout_marginTop="4dp"
        android:onClick="tuneContrast"
        android:textColor="@color/grey">
    </TextView>

    <ImageButton
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:scaleType="fitXY"
        android:background="@drawable/saturation_setting"
        app:layout_constraintTop_toBottomOf="@id/enhanceBtn"
        android:layout_marginTop="28dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="40dp"
        android:onClick="tuneSaturation"
        android:id="@+id/saturationBtn" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturation"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/saturationBtn"
        app:layout_constraintStart_toStartOf="@id/saturationBtn"
        app:layout_constraintEnd_toEndOf="@id/saturationBtn"
        android:layout_marginTop="4dp"
        android:onClick="tuneSaturation"
        android:textColor="@color/grey">
    </TextView>
    <!--第三行-->
    <ImageButton
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:scaleType="fitXY"
        android:background="@drawable/tag_setting"
        app:layout_constraintTop_toBottomOf="@id/brightBtn"
        android:layout_marginTop="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="tagClick"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/tagBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tags"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tagBtn"
        app:layout_constraintStart_toStartOf="@id/tagBtn"
        app:layout_constraintEnd_toEndOf="@id/tagBtn"
        android:layout_marginTop="4dp"
        android:textColor="@color/grey" />

    <ImageButton
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:scaleType="fitXY"
        android:background="@drawable/rotate_setting"
        app:layout_constraintTop_toBottomOf="@id/textBtn"
        android:layout_marginTop="28dp"
        app:layout_constraintLeft_toLeftOf="@id/cropBtn"
        android:onClick="rotateClick"
        android:id="@+id/rotateBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/rotateBtn"
        app:layout_constraintStart_toStartOf="@id/rotateBtn"
        app:layout_constraintEnd_toEndOf="@id/rotateBtn"
        android:layout_marginTop="4dp"
        android:textColor="@color/grey" />

    <ImageButton
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:scaleType="fitXY"
        android:background="@drawable/info_setting"
        app:layout_constraintTop_toBottomOf="@id/textBtn"
        android:layout_marginTop="28dp"
        app:layout_constraintLeft_toLeftOf="@id/contrastBtn"
        android:onClick="openInfo"
        android:id="@+id/infoBtn"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/infoBtn"
        app:layout_constraintStart_toStartOf="@id/infoBtn"
        app:layout_constraintEnd_toEndOf="@id/infoBtn"
        android:layout_marginTop="4dp"
        android:textColor="@color/grey"/>

</androidx.constraintlayout.widget.ConstraintLayout>